Delete the data

--- a/Inception.ipynb
+++ b/Inception.ipynb
@@ -314,7 +314,11 @@
       "batch_size is 64, lr is 0.01, beta is 0.9\n",
       "Train on 5000 samples, validate on 1000 samples\n",
       "Epoch 1/50\n",
-      " 256/5000 [>.............................] - ETA: 18:23 - loss: 2.7748 - acc: 0.1016"
+      "5000/5000 [==============================] - 410s 82ms/step - loss: 2.1223 - acc: 0.2194 - val_loss: 2.0688 - val_acc: 0.2400\n",
+      "Epoch 2/50\n",
+      "5000/5000 [==============================] - 371s 74ms/step - loss: 1.9237 - acc: 0.2860 - val_loss: 1.8390 - val_acc: 0.3210\n",
+      "Epoch 3/50\n",
+      "4992/5000 [============================>.] - ETA: 0s - loss: 1.8538 - acc: 0.3011"
      ]
     }
    ],
